--- a/Distribution.ipynb
+++ b/Distribution.ipynb
@@ -21,7 +21,7 @@
     "from ipywidgets import widgets\n",
     "import plotly.graph_objects as go\n",
     "\n",
-    "from auxiliary.distributions import *\n"
+    "from auxiliary.distributions import *"
    ]
   },
   {
@@ -44,9 +44,8 @@
     "If the probability of getting a success is p, then the expected number of trials until the ﬁrst\n",
     "success is 1/p.\n",
     "\n",
-    "Example: What is the probability that we ﬂip a fair coin four times and don’t see any heads? This is the same as asking what is P (X > 4) where X ∼ Geo(1/2). P (X > 4) = 1 − P (X =\n",
-    "1)−P (X = 2)−P (X = 3)−P (X = 4) = 1−(1/2)−(1/2)(1/2)−(1/2)(1/2)2 −(1/2)(1/2)3 =\n",
-    "1/16. Of course, we could also have just computed it directly, but here we see an example\n",
+    "Example: What is the probability that we ﬂip a fair coin four times and don’t see any heads? This is the same as asking what is $P (X > 4)$ where $ X \\sim Geo(1/2)$. $P (X > 4) = 1 − P (X =\n",
+    "1)−P (X = 2)−P (X = 3)−P (X = 4) = 1−(1/2)−(1/2)(1/2)−(1/2)(1/2)2 −(1/2)(1/2)3 = 1/16.$ Of course, we could also have just computed it directly, but here we see an example\n",
     "of using the geometric distribution and we can also see that we got the right answer."
    ]
   },
@@ -58,7 +57,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "86d5b534dd77481cacfdf3156c84a05c",
+       "model_id": "411d1912436842eeb4b8d950bf058475",
        "version_major": 2,
        "version_minor": 0
       },
@@ -96,13 +95,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3d415868417b42a5a487276053aa9c6e",
+       "model_id": "1d0ecd4f568f4fbfb6897b86a5e7c880",
        "version_major": 2,
        "version_minor": 0
       },
@@ -149,13 +148,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d00107d4142c4e82a540435ab5481022",
+       "model_id": "c4593aff4b7044f18b86b0273c5c346a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -168,7 +167,7 @@
     }
    ],
    "source": [
-    "pois = Poisson(n=30)\n",
+    "pois = Poisson(n=20)\n",
     "pois.InteractivePlotLambd()\n",
     "widgets.VBox([pois.container, pois.fig])"
    ]
@@ -207,13 +206,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ddd8b3d2e3654828a51469306075d2df",
+       "model_id": "39adcdb1812b484f9c83c8e40028e967",
        "version_major": 2,
        "version_minor": 0
       },
@@ -237,7 +236,7 @@
    "metadata": {},
    "source": [
     "#### 2.3 Gamma\n",
-    "If X1, X2, . . . , Xn are independent (and identically distributed $Exp(\\lambda)$ waiting times between successive events, then the total waiting time for all n events to occur $Y = \\sum_{i}^{n} X_i $ will follow a gamma distribution with shape parameter $ \\alpha = n $ and rate parameter $\\beta = λ$\n",
+    "If $ X_1, X_2, . . . , X_n$ are independent (and identically distributed $Exp(\\lambda)$ waiting times between successive events, then the total waiting time for all n events to occur $Y = \\sum_{i}^{n} X_i $ will follow a gamma distribution with shape parameter $ \\alpha = n $ and rate parameter $\\beta = λ$\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -251,13 +250,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b2c5dc1fd284b35941769480e452a39",
+       "model_id": "d6a6f09a5b2b409d924d8ae10f564359",
        "version_major": 2,
        "version_minor": 0
       },
@@ -299,13 +298,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "24c025febab74e9d8bac4153005c0c9a",
+       "model_id": "693a7cdeed88490a8dbf8a959ce5074c",
        "version_major": 2,
        "version_minor": 0
       },
